# contributhon-2020

./: .gitignore  README.md  README.rst  Remote Debugging VSCode.md  Remote Debugging with PyCharm for OpenStack.md  how-openstackclient-works.md  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.devbots/: needs-review.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: documentation.md
.github/workflows/: azure-static-web-apps-green-river-0b49fad1e.yml  azure-static-web-apps-zealous-ocean-0bb043e1e.yml
doc/source/: conf.py  index.rst
doc/source/JoMinGi/: index.rst  keystone_token_system_scope.rst
doc/source/contributors/: how_to_contribute.rst  index.rst
doc/source/development_setup_guide/: index.rst  vscode-setting.rst
doc/source/dongwon_jang/: index.rst  issue-Support_nova_server_tags.rst  issue-openstack_image_list_does_not_support_substring_match_or_wildcards.rst  study-how_to_install_devstack.rst  study-what_is_zanata.rst  test.rst
doc/source/gyuseok-jung/: first-issue.rst  index.rst
doc/source/hanjoo-cho/: index.rst  introduce-issue.rst  openstack-server-list.rst  pdb-doc.rst
doc/source/hyeim-yang/: first-issue.rst  index.rst
doc/source/jinsu_park/: bug_comment.rst  bugfix_miss_format_output.rst  index.rst  install_publicly_accessible_devstack.rst
doc/source/keonwoo_lee/: Create_instance_on_devstack.rst  How to fix bug in the gerrit.rst  How to start Openstack.rst  How_to_start_Translation_Activity.rst  How_to_write_RST_Format.rst  Learn how contribute to Openstack Community.rst  Openstack_CLI.rst  index.rst  (+4 more)
(+17 files in other folders)
