[metadata]
name = contribution-2020
summary = Docs and I18n for Contributhon 2020 event in Korea
description-file =
    README.rst
author = Ian Y. Choi
author-email = ianyrchoi@gmail.com
home-page = https://www.oss.kr/contributhon

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build
